Day 1 Part 2, Day 2 data

--- a/2018/Day 1.ipynb
+++ b/2018/Day 1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,21 @@
     "    if function == \"+\":\n",
     "        count += int(line[1:-1])\n",
     "    else: \n",
-    "        count -= int(line[1:-1])\n",
-    "    "
+    "        count -= int(line[1:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'4'"
+       "'79113'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "553"
+       "[]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count"
+    "double"
    ]
   },
   {
